# Rust.Projects

./: .gitignore
my_website/: .gitignore  Cargo.toml  README.md
my_website/anthony_webapp/: Cargo.toml
my_website/anthony_webapp/src/: lib.rs
my_website/anthony_webapp/src/launch_aw/: Cargo.toml
my_website/anthony_webapp/src/launch_aw/src/: lib.rs
my_website/anthony_webapp/src/vin/: main.rs
my_website/anthony_webapp/static/: style.css
my_website/anthony_webapp/templates/: navbar.html.tera  resume.html.tera
my_website/controller/: Cargo.toml  Rocket.toml
my_website/controller/src/: lib.rs  main.rs
my_website/controller/static/: homestyle.css  loginstyle.css  style.css
my_website/controller/templates/: about.html.tera  addtodeck.html.tera  createdeck.html.tera  homescreen.html.tera  index.html.tera  login.html.tera  practice.html.tera  resume.html.tera  webapp.html.tera
my_website/data/: deckdb.db
my_website/hello/: 404.html  hello.html
my_website/hello/src/: main.rs
my_website/note_webapp/: Cargo.toml
my_website/note_webapp/src/: lib.rs
my_website/note_webapp/src/api/: Cargo.toml
my_website/note_webapp/src/api/src/: lib.rs
my_website/note_webapp/src/api/src/config/: Cargo.toml
my_website/note_webapp/src/api/src/config/src/: lib.rs
my_website/note_webapp/src/api/src/config/src/launch/: Cargo.toml
my_website/note_webapp/src/api/src/config/src/launch/src/: lib.rs
my_website/scripts/: j.js
my_website/static/: loginstyle.css  style.css
my_website/templates/: about.html.tera  index.html.tera  library.html.tera  login.html.tera  navbar.html.tera  resume.html.tera  webapp.html.tera
